# FileTools

./: .gitmodules  CMakeLists.txt  LICENSE  Liscense.txt  README.md  Table-structure.md  gitupdate.py  gitupdate.sh
.github/workflows/: ccpp.yml  main.yml  osx.yml
CMake/: Configure.cmake  FlexBison.cmake  MakeFBT.cmake  MakeFT.cmake  Readme.md
Compiler/: CMakeLists.txt  makeft.cpp  makeft.md
Design/: Doxyfile.txt.in
Documentation/: File-structure.md  FileStructure.md  TableCompiler.md  TableStructure.md
Example/: API.h  CMakeLists.txt  Example.cpp  Example.h  Main.cpp
File/: CMakeLists.txt  ftAtomic.cpp  ftAtomic.h  ftBuildInfo.cpp  ftBuildInfo.h  ftBuildMember.cpp  ftBuildMember.h  ftBuildStruct.cpp  ftBuildStruct.h  ftChunk.cpp  ftChunk.h  ftCompiler.cpp  ftCompiler.h  ftCompilerStruct.cpp  ftCompilerStruct.h  ftCompilerVariable.cpp  ftCompilerVariable.h  ftConfig.h  ftConfig.h.in  ftEndianUtils.cpp  ftEndianUtils.h  ftFile.cpp  ftFile.h  ftHashTypes.h  ftLogger.cpp  ftLogger.h  ftMember.cpp  ftMember.h  ftPlatformHeaders.h  ftScanDNA.cpp  ftScanDNA.h  ftScanner.cpp  ftScanner.h  ftScanner.l  ftStreams.cpp  ftStreams.h  ftStruct.cpp  ftStruct.h  ftTable.cpp  ftTable.h  (+10 more)
File/zlib/: CMakeLists.txt
FileFormats/Blend/: Blender.h  CMakeLists.txt  bfBlender.cpp  ftBlend.cpp  ftBlend.h
FileFormats/Blend/Test/: CMakeLists.txt  RandomChunkSwap.blend  RandomDataSwap.blend  RandomDatablockSwap.blend  Test.blend  Test.blend.h  TestBlend.h  main.cpp
FileFormats/Blend/Test/catch/: catch.hpp  defines.h
FileFormats/Example/: CMakeLists.txt  Example.cpp  Example.h  ExampleTables.cpp
FileFormats/Example/API/: Data1.h  Data2.h  FileInfo.h  HomeType.h
FileFormats/Example/Test/: Main.cpp
FileTest/: CMakeLists.txt  Test.blend  log.html  main.cpp
Test/: CMakeLists.txt  fhCharHash.cpp  ftAtomic.cpp  ftScanner.cpp  ftTables.cpp
Tests/: CMakeLists.txt  Scanner.cpp  Templates.h  fhCharHash.cpp  ftAtomic.cpp  ftTables.cpp
Tests/templates/: Test.h  TetstApi.h
Tools/CompileTest/: CMakeLists.txt
Tools/Compiler/: CMakeLists.txt  TableCompiler.cpp
Tools/Compiler/CMake/: TableCompiler.cmake
Tools/Decompiler/: BlenderFile.h  BulletFile.h  CMakeLists.txt  InspectorFile.h  SidFile.h  TableDecompiler.cpp
Tools/Decompiler/API/: API.blend  API.sid  Insp.insp
Tools/Decompiler/CMake/: TableDecompiler.cmake
Tools/Decompiler/Test/: test.blend
Tools/SwapChunkCodes/: CMakeLists.txt  SwapChunkCodes.cpp
Tools/SwapChunkCodes/CMake/: SwapChunkCodes.cmake
docs/: a00002.html  a00002.js  a00005.html  a00005.js  a00008.html  a00008.js  a00011.html  a00011.js  a00014.html  a00014.js  a00017.html  a00017.js  a00020.html  a00020.js  a00023.html  a00026.html  a00026.js  a00029.html  a00032.html  a00032.js  a00035.html  a00035.js  a00038.html  a00038.js  a00041.html  a00041.js  a00044.html  a00044.js  a00047.html  a00047.js  a00050.html  a00053.html  a00056.html  a00059.html  a00062.html  a00065.html  a00065.js  a00068.html  a00071.html  a00071.js  (+251 more)
